# matrice

./: Bench.ipynb  Makefile  README.md  matrice.pc
benchmarks/: bench-double.c  bench-float.c  bench.c
bindings/cpp/: matrice.hxx
bindings/ocaml/matrice/: dune-project
bindings/ocaml/matrice/lib/: dune  function_description.ml  matrice.ml  type_description.ml
bindings/ocaml/matrice/test/: .test_matrice.ml.swp  dune  test_matrice.ml
inc/: data_type.h  matrix.h  matrix.h.pch  vector.h  vector.h.pch
src/: matrix.c  vector.c
tests/: test_allocations.c  test_basics.c  test_ops.c  test_shared.c
tests-cpp/: test_bindings_cpp.cxx
